# router_agent

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
alembic/versions/: 20260615_0001_add_runtime_persistence_tables.py  20260623_0002_add_agent_sessions.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  chat_completions.py  instructions.py  main_agent.py  observability.py  output_schema.py  tools.py
backend/app/api/: __init__.py  artifacts.py  events.py  health.py  sessions.py  subagents.py  (+1 more)
backend/models/: router_schema.py
docs/: agent-api-smoke.md  architecture.md  backend.md  backend_rebuild.md  backend_test.md  design.md  frontend-api.md  local-dev.md  plc_realistic_question_bank.md  plc_realistic_question_bank_100.md  project-progress-report-2026-06-21.md  落实方案.md
docs/subagent_api/: API路由总览与详细设计.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/scripts/: smoke-router.mjs
frontend/src/: App.tsx  main.tsx
schema/: artifact.schema.json  event.schema.json  router_event.schema.json  task_state.schema.json  worker_input.schema.json  worker_result.schema.json
schema/ts/: router_contract.d.ts
scripts/: api_agent_plc_smoke.py  dev_call_agent_tool.py  dev_call_mock_worker.py  dev_call_real_mcp_worker.py  dev_call_subagent_worker.py  dev_create_artifacts.py  dev_emit_events.py  dev_guard_check.py  dev_list_plc_mcp_tools.py  dev_run_gate.py  dev_run_main_agent_episode.py  dev_seed_task.py  dev_setup_db.sh  dev_worker_result_chain.py  e2e_run_mock_task.py  start_plc_worker_mcp_server.py
scripts/eval/: run_plc_eval.py
(+507 files in other folders)
