[project]
name = "router-agent"
version = "0.1.0"
description = "Router backend schema contracts and runtime models."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.0",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
