[project]
name = "router-agent"
version = "0.1.0"
description = "Router backend schema contracts and runtime models."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "mcp>=1.28,<2",
    "openai>=2.42,<3",
    "openai-agents>=0.7,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
